1.21.6-0.4.0 beta